--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,30 @@
+unicodecsv
 Django==1.5.8
 Markdown==2.4
 Pillow==2.4.0
 South==0.8.4
 argparse==1.2.1
+certifi==14.05.14
 django-ajax-selects==1.3.4
 django-appconf==0.6
+django-classy-tags==0.5.1
 django-extensions==1.3.6
 django-notify==1.1.2
 django-pagination==1.0.7
 -e hg+https://bitbucket.org/richert/django-profiles@d69e3428781859ecebca245730e83890ba1296f5#egg=django_profiles-dev
 django-registration==1.0
+django-sekizai==0.7
 django-simple-captcha==0.4.2
 django-tables2==0.15.0
 djangorestframework==2.3.13
-numpy==1.8.1
+numpy==1.6.2
+pandas==0.8.0
 psycopg2==2.5.2
 pthelma==0.7.2
+py4j==0.8.2.1
+python-dateutil==1.5
 pytz==2014.2
+requests==2.4.0
 six==1.6.1
-wsgiref==0.1.2
 suds==0.4
+wsgiref==0.1.2
